# hyde_manager

./: README.md  pyproject.toml
src/hyde_manager/: cli.py  config.yml  main.py
src/hyde_manager/app/: base.py  button_as_option.py  options.py
src/hyde_manager/app/screens/: boolean_modal.py  config_modal.py  one_of_modal.py
src/hyde_manager/app/widgets/: base.py  options.py  sidebar_step_menu.py  splitted_option_list.py
src/hyde_manager/installer/: config.py  main.py
src/hyde_manager/updater/: main.py
