[project]
name = "hyde_manager"
version = "0.1.0"
description = "Script for installing/updating/removing HyDE"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["textual>=3.5.0", "textual-dev>=1.7.0"]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[dependency-groups]
dev = ["pre-commit>=4.2.0"]
lint = ["pyright>=1.1.401", "ruff>=0.11.10"]
test = ["pytest>=8.3.5"]

[tool.ruff]
line-length = 80

[project.scripts]
cliapp = "hyde_manager.cli:main"
